# python-swa

.github/workflows/: azure-static-web-apps-ambitious-plant-09bf7af00.yml  azure-static-web-apps-jolly-mud-0f051be22.yml  azure-static-web-apps-lemon-river-093e9e012.yml
api/: pyproject.toml  requirements.txt
src/: index.html  pyproject.toml  staticwebapp.config.json
