[tool.poetry]
name = "azure-functions-python-poetry"
version = "0.1.0"
description = ""
authors = ["Timothy Wang"]

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "1.0.0a5"
azure-storage-queue = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.0"
azure-functions-worker = "1.0.0a6"
ptvsd = "^4.2.0"

[build-system]
requires = ["poetry>=2.0.1"]
build-backend = "poetry.masonry.api"